@@ -1,5 +1,6 @@
 package com.ghostchu.quickshop.util;
 
+import com.destroystokyo.paper.ParticleBuilder;
 import com.ghostchu.quickshop.QuickShop;
 import com.ghostchu.quickshop.api.event.Phase;
 import com.ghostchu.quickshop.api.event.management.ShopCreateEvent;
@@ -19,17 +20,23 @@ import com.ghostchu.quickshop.obj.QUserImpl;
 import com.ghostchu.quickshop.shop.SimpleInfo;
 import com.ghostchu.quickshop.shop.display.AbstractDisplayItem;
 import com.ghostchu.quickshop.util.logger.Log;
+import dev.dejvokep.boostedyaml.route.Route;
+import io.papermc.paper.registry.RegistryAccess;
+import io.papermc.paper.registry.RegistryKey;
 import io.papermc.lib.PaperLib;
 import lombok.Getter;
 import lombok.Setter;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.serializer.plain.PlainTextComponentSerializer;
 import org.bukkit.Bukkit;
+import org.bukkit.Color;
 import org.bukkit.DyeColor;
 import org.bukkit.GameMode;
 import org.bukkit.Location;
 import org.bukkit.Material;
 import org.bukkit.OfflinePlayer;
+import org.bukkit.Particle;
+import org.bukkit.Registry;
 import org.bukkit.Sound;
 import org.bukkit.Tag;
 import org.bukkit.World;
@@ -42,11 +49,10 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.configuration.InvalidConfigurationException;
 import org.bukkit.configuration.file.YamlConfiguration;
 import org.bukkit.enchantments.Enchantment;
+import org.bukkit.entity.Entity;
 import org.bukkit.entity.Player;
 import org.bukkit.event.Cancellable;
 import org.bukkit.event.Event;
-import org.bukkit.event.HandlerList;
-import org.bukkit.event.Listener;
 import org.bukkit.inventory.EquipmentSlot;
 import org.bukkit.inventory.InventoryHolder;
 import org.bukkit.inventory.ItemStack;
@@ -54,7 +60,6 @@ import org.bukkit.inventory.meta.Damageable;
 import org.bukkit.inventory.meta.EnchantmentStorageMeta;
 import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.plugin.Plugin;
-import org.bukkit.plugin.RegisteredListener;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -93,6 +98,8 @@ public class Util {
   private static final Set<Material> SHOPABLES = new HashSet<>();
   private static final List<BlockFace> VERTICAL_FACING = List.of(BlockFace.NORTH, BlockFace.EAST, BlockFace.SOUTH, BlockFace.WEST);
   private static int BYPASSED_CUSTOM_STACKSIZE = -1;
+  //add limit for vanilla values
+  public static final int VANILLA_MAX_STACK_SIZE = 99;
   private static Yaml yaml = null;
   private static Boolean devMode = null;
   @Setter
@@ -150,6 +157,156 @@ public class Util {
 
     if(plugin.getConfig().getBoolean("effect.sound.onclick")) {
       player.playSound(player.getLocation(), Sound.BLOCK_DISPENSER_FAIL, 80.f, 1.0f);
+    }
+  }
+
+  public static void playSound(@NotNull final Player player, @NotNull final String config) {
+
+    final boolean globalEnabled = plugin.getConfig().getBoolean("effect.sound.enabled");
+    if(!globalEnabled) {
+      return;
+    }
+
+    final float globalVolume = plugin.getConfig().getFloat("effect.sound.volume");
+    final float globalPitch = plugin.getConfig().getFloat("effect.sound.pitch");
+
+    final Route route = Route.fromString(config);
+
+    if(!plugin.getConfig().contains(route)) {
+      return;
+    }
+
+    final Route parentEnabled = route.parent().add("enabled");
+    if(plugin.getConfig().contains(parentEnabled) && !plugin.getConfig().getBoolean(parentEnabled)) {
+      return;
+    }
+
+    final boolean enabled = plugin.getConfig().getBoolean(config + ".enabled", true);
+    if(!enabled) {
+      return;
+    }
+
+    final float volume = plugin.getConfig().getFloat(config + ".volume", globalVolume);
+    final float pitch = plugin.getConfig().getFloat(config + ".pitch", globalPitch);
+
+    //final Registry<Sound> registryAccess = RegistryAccess.registryAccess().getRegistry(RegistryKey.SOUND_EVENT);
+
+    player.playSound(player.getLocation(), Sound.valueOf(plugin.getConfig().getString(config + ".sound")), volume, pitch);
+  }
+
+  public static void playParticle(@NotNull final Player player, @NotNull final String config) {
+
+    if(!plugin.getConfig().getBoolean("effect.particle.enabled")) {
+      return;
+    }
+
+    final Route route = Route.fromString(config);
+    if(!plugin.getConfig().contains(route)) {
+      return;
+    }
+
+    final Route parentEnabled = route.parent().add("enabled");
+    if(plugin.getConfig().contains(parentEnabled) && !plugin.getConfig().getBoolean(parentEnabled)) {
+
+      return;
+    }
+
+    if(!plugin.getConfig().getBoolean(config + ".enabled", true)) {
+
+      return;
+    }
+
+    final String particleName = plugin.getConfig().getString(config + ".particle", "");
+    if(particleName == null || particleName.isEmpty()) {
+
+      return;
+    }
+
+    final Particle particle;
+    try {
+
+      particle = Particle.valueOf(particleName.toUpperCase());
+    } catch (final Exception e) {
+
+      plugin.logger().warn("Invalid particle: " + particleName);
+      return;
+    }
+
+    final int count = plugin.getConfig().getInt(config + ".count", 1);
+    final double extra = plugin.getConfig().getDouble(config + ".extra", 0.0);
+
+    final double offsetX = plugin.getConfig().getDouble(config + ".offset.x", 0.0);
+    final double offsetY = plugin.getConfig().getDouble(config + ".offset.y", 0.0);
+    final double offsetZ = plugin.getConfig().getDouble(config + ".offset.z", 0.0);
+
+    final boolean selfOnly = plugin.getConfig().getBoolean("effect.particle.self-only", true);
+    final int receiverDistance = plugin.getConfig().getInt("effect.particle.receiver-distance", 24);
+    final boolean byDistance = plugin.getConfig().getBoolean("effect.particle.receiver-by-distance", true);
+
+    final Location loc = player.getLocation().add(0, 1, 0);
+
+    final ParticleBuilder builder = new ParticleBuilder(particle)
+            .location(loc)
+            .count(count)
+            .extra(extra)
+            .offset(offsetX, offsetY, offsetZ);
+
+    if(plugin.getConfig().contains(config + ".dust.color")) {
+
+      final Color color = parseColor(plugin.getConfig().getString(config + ".dust.color"));
+      final float scale = (float) plugin.getConfig().getFloat(config + ".dust.scale", 1.0f);
+
+      builder.color(color, scale);
+    }
+
+    if(plugin.getConfig().contains(config + ".dust-transition.from")) {
+
+      final Color from = parseColor(plugin.getConfig().getString(config + ".dust-transition.from"));
+      final Color to = parseColor(plugin.getConfig().getString(config + ".dust-transition.to"));
+      final float scale = (float) plugin.getConfig().getFloat(config + ".dust-transition.scale", 1.0f);
+
+      builder.colorTransition(from, to, scale);
+    }
+
+    if(plugin.getConfig().contains(config + ".block.material")) {
+
+      final Material mat = Material.matchMaterial(plugin.getConfig().getString(config + ".block.material"));
+      if(mat != null) {
+
+        builder.data(mat.createBlockData());
+      }
+    }
+
+    if(plugin.getConfig().contains(config + ".item.material")) {
+
+      final Material mat = Material.matchMaterial(plugin.getConfig().getString(config + ".item.material"));
+      if(mat != null) {
+
+        builder.data(new ItemStack(mat));
+      }
+    }
+
+    if(selfOnly) {
+
+      builder.receivers(player);
+    } else {
+
+      builder.receivers(receiverDistance, byDistance);
+    }
+
+    builder.spawn();
+  }
+
+  private static Color parseColor(String hex) {
+    if(hex == null) return Color.WHITE;
+
+    hex = hex.replace("#", "");
+
+    try {
+      final int rgb = Integer.parseInt(hex, 16);
+      return Color.fromRGB(rgb);
+    } catch (final Exception e) {
+      return Color.WHITE;
     }
   }
 
@@ -465,12 +622,13 @@ public class Util {
     if(inv == null) {
       return 0;
     }
+
     if(inv instanceof final CountableInventoryWrapper ciw) {
       return ciw.countSpace(shop::matches);
     } else {
       final ItemStack item = shop.getItem();
       int space = 0;
-      final int itemMaxStackSize = getItemMaxStackSize(item.getType());
+      final int itemMaxStackSize = item.getMaxStackSize();
       for(final ItemStack iStack : inv) {
         if(iStack == null || iStack.getType() == Material.AIR) {
           space += itemMaxStackSize;
@@ -513,7 +671,7 @@ public class Util {
       return ciw.countSpace(input->matcher.matches(item, input));
     } else {
       int space = 0;
-      final int itemMaxStackSize = getItemMaxStackSize(item.getType());
+      final int itemMaxStackSize = item.getMaxStackSize();
       for(final ItemStack iStack : inv) {
         if(iStack == null || iStack.getType() == Material.AIR) {
           space += itemMaxStackSize;
@@ -955,9 +1113,15 @@ public class Util {
    * @return the player names
    */
   @NotNull
-  public static List<String> getPlayerList() {
+  public static List<String> getPlayerList(final CommandSender sender) {
 
-    final List<String> tabList = Bukkit.getOnlinePlayers().stream().map(Player::getName).collect(Collectors.toList());
+    final List<String> tabList = new ArrayList<>();
+    if(sender instanceof final Player player) {
+      tabList.addAll(Bukkit.getOnlinePlayers().stream().filter(player::canSee).map(Player::getName).toList());
+    } else {
+      tabList.addAll(Bukkit.getOnlinePlayers().stream().map(Player::getName).toList());
+    }
+
     if(plugin.getConfig().getBoolean("include-offlineplayer-list")) {
       tabList.addAll(Arrays.stream(Bukkit.getOfflinePlayers()).map(OfflinePlayer::getName).filter(Objects::nonNull).toList());
     }
@@ -1152,7 +1316,16 @@ public class Util {
       }
 
       if("*".equalsIgnoreCase(data[0])) {
-        BYPASSED_CUSTOM_STACKSIZE = Integer.parseInt(data[1]);
+        try {
+
+          BYPASSED_CUSTOM_STACKSIZE = Integer.parseInt(data[1]);
+          if(BYPASSED_CUSTOM_STACKSIZE > VANILLA_MAX_STACK_SIZE) {
+
+            BYPASSED_CUSTOM_STACKSIZE = VANILLA_MAX_STACK_SIZE;
+            plugin.logger().warn("custom-item-stacksize for entry * was higher than the vanilla limit, resetting to maximum vanilla limit.", material);
+          }
+        } catch(final NumberFormatException ignore) {
+        }
       }
 
       final Material mat = Material.matchMaterial(data[0]);
@@ -1161,7 +1334,20 @@ public class Util {
         continue;
       }
 
-      CUSTOM_STACKSIZE.put(mat, Integer.parseInt(data[1]));
+      try {
+
+        final int stackSize = Integer.parseInt(data[1]);
+        final boolean invalid = stackSize > VANILLA_MAX_STACK_SIZE;
+
+        CUSTOM_STACKSIZE.put(mat, ((invalid)? VANILLA_MAX_STACK_SIZE : stackSize));
+
+        if(invalid) {
+
+          plugin.logger().warn("custom-item-stacksize for material {} was higher than the vanilla limit, resetting to maximum vanilla limit.", material);
+        }
+      } catch(final NumberFormatException ignore) {
+
+      }
     }
     try {
 
@@ -1460,21 +1646,6 @@ public class Util {
     final YamlConfiguration cfg = new YamlConfiguration();
     cfg.set("item", iStack);
     return cfg.saveToString();
-  }
-
-  /**
-   * Unregister all listeners registered instances that belong to specified class
-   *
-   * @param plugin Plugin instance
-   * @param clazz  Class to unregister
-   */
-  public static void unregisterListenerClazz(@NotNull final Plugin plugin, @NotNull final Class<? extends Listener> clazz) {
-
-    for(final RegisteredListener registeredListener : HandlerList.getRegisteredListeners(plugin)) {
-      if(registeredListener.getListener().getClass().equals(clazz)) {
-        HandlerList.unregisterAll(registeredListener.getListener());
-      }
-    }
   }
 
   public static boolean checkIfBungee() {
